# arcaflow-plugin-fio

./: .gitignore  Dockerfile  README.md  fio_schema.py  pyproject.toml  requirements.txt  test_fio_plugin.py
.github/workflows/: carpenter.yaml  carpenter_build.yaml  carpenter_push.yaml  workflow.yaml
arcaflow_plugin_fio/: fio_plugin.py  fio_schema.py
fixtures/: poisson-rate-submission_input.yaml
tests/: test_fio_plugin.py
