[tool.poetry]
name = "arcaflow_plugin_fio"
version = "0.1.1"
description = ""
authors = ["Matthew F Leader"]
license = "Apache-2.0+GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "0.10.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pycodestyle = "^2.9.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^67.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
preview = "true"
experimental-string-process = "true"